# humpback-kv-db

./: .gitignore  Cargo.toml  example.js  example.ts  index.html  log.txt
backend/humpback-data/scripts/: eventLoop.js
humpback-data/: default.Data.bindb  groups.list  internal.sql  main.Data.bindb  main.Desc.bindb  main.Table.bindb  store.db
humpback-data/scripts/: eventLoop.js
humpback-frontend/: index.html  package-lock.json  package.json
humpback-frontend/src/: App.tsx  types.ts
humpback-frontend/src/components/: CodeEditor.tsx  DatebaseList.tsx  Sidebar.tsx  SqlManager.tsx  sqlApi.ts
src/: _.rs  __.rs  cli.rs  core.rs  groups.rs  http_service.rs  io_service.rs  main.rs  object_service.rs  objects.rs  parser.rs  store.rs  tcp_service.rs
src/database/: core.rs  objects.rs
src/http_server/: handlers.rs  mod.rs  router.rs
src/humpback-data/: main.Data.bindb  main.Desc.bindb
src/humpback-data/scripts/: eventLoop.js
src/internal/: db.rs  helpers.rs  mod.rs  scripts.rs
src/js/: core.rs  event.rs  mod.rs  op_db.rs  op_event.rs  op_http.rs  op_kv.rs  op_sql.rs  op_utils.rs  runtime.js  runtime.rs  runtime_a.rs
src/js_runtime/: core.rs  mod.rs  op_db.rs  op_file.rs  op_http.rs  runtime.js
src/kv/: core.rs  mod.rs  objects.rs
src/sql/: core.rs  db.rs  dbmodel.rs  mod.rs
tests/: stress_test.py  test_api.http
