[package]
name = "humpback"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
rusqlite = { version = "0.29", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
