[package]
name = "humpback"
version = "0.5.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
deno_core = "0.311"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
rusqlite = { version = "0.30", features = ["bundled"] }
rand = "0.8"
ureq = "3.0.12"
base64 = "0.22.1"
[dependencies.uuid]
version = "1.17.0"
features = ["v4"]
